[package]
name = "myo"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.8"
kernel_core = {package = "core", path = "./core"}

[[test]]
name = "stack_overflow"
harness = false

[dev-dependencies]
spin = "0.5.2"
volatile = "0.2.6" # TODO: Figure out how to use latest (0.4.4)
lazy_static = "1.4.0"
x86_64 = "0.14.6"

# `cargo test` calls `bootimage runner` because of `.cargo/config.toml` which then
# will pass the following arguments to the QEMU run command which gives us a "device"
# that we can write to through port 0xf4 (unused port for x86) which has a size of 0x04 bytes.
# Writing `value` to that device will result in QEMU exiting with a status of `(value << 1) | 1`.
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (Same as (QemuExitCode::Success << 1 | 1))